src/index.css
:root {
  --color-weight-100: hsl(0, 0%, 100%);
  --color-weight-200: hsl(0, 0%, 96%);
  --color-weight-300: hsl(0, 0%, 89%);
  --color-weight-400: hsl(222, 9%, 78%);
  --color-weight-500: hsl(213, 4%, 51%);
  --color-weight-500-transparent: hsla(213, 4%, 51%, 0.5);
  --color-weight-600: hsl(216, 8%, 38%);
  --color-weight-700: hsl(216, 9%, 23%);
  --color-weight-800: hsl(220, 7%, 18%);
  --color-weight-900: hsl(216, 8%, 12%);
  --color-weight-1000: hsl(225, 9%, 9%);
  --color-weight-1000-transparent: hsla(225, 9%, 9%, 0.5);

  --orange: hsl(13, 75%, 58%);
  --orange-hover: hsl(21, 86%, 67%);
}

/* HTML STYLES */

html {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
}

body {
  font-family: "Roboto", Arial, Helvetica, sans-serif;
  margin: 0;
}

* {
  box-sizing: inherit;
}

h1 {
  font-size: 2rem; /* 32px */
}

h2 {
  font-size: 1.75rem; /* 28px */
  font-weight: 300;
}

h3 {
  font-size: 1.5rem; /* 24px */
}

h4 {
  font-size: 1.25rem; /* 20px */
}

h5 {
  font-size: 1rem; /* 16px */
}

h6 {
  color: var(--orange);
}

h6,
p {
  font-size: 0.875rem; /* 14px */
}

img {
  user-select: none;
  max-width: 100%;
}

/* BUTTON STYLES */

.btn {
  cursor: pointer;
  border: none;
}

.menu-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--color-weight-700);
  width: 56px;
  height: 56px;
  min-width: 56px;
  min-height: 56px;
}

.menu-btn--icon-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu-icon {
  width: 23px;
  height: 14px;
}

.close-icon {
  width: 18px;
}

.delete-file-btn {
  background-color: transparent;
  margin-right: 1rem;
}

.delete-file-btn--icon {
  min-width: 18px;
  min-height: 20px;
}

.save-file-btn,
.new-document-btn,
.delete-note-modal--btn {
  background-color: var(--orange);
  color: var(--color-weight-100);
  border-radius: 4px;
  font-size: 0.9375rem;
  padding: 12px;
}

.save-file-btn {
  width: 40px;
  height: 40px;
  min-width: 40px;
  min-height: 40px;
  margin: 8px;
}

.save-file-btn:hover,
.new-document-btn:hover,
.delete-note-modal--btn:hover {
  background-color: var(--orange-hover);
}

.save-file-btn--icon {
  width: 1rem;
  height: 1rem;
}

.new-document-btn {
  border-radius: 4px;
  font-size: 0.9375rem;
  width: 100%;
}

.preview-btn {
  background-color: transparent;
}

.preview-btn--icon:hover {
  color: var(--orange);
}

/* CUSTOM STYLES */

#root {
  height: 100%;
  overflow-x: hidden;
}

.page-content {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
  transition: transform 0.5s;
}

.page-content.menu-active {
  transform: translateX(250px);
  overflow-x: hidden;
}

.header {
  display: flex;
  align-items: center;
  background-color: var(--color-weight-800);
}

.delete-note-modal--container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 10;
}

.delete-note-modal--container.light {
  background-color: var(--color-weight-1000-transparent);
}

.delete-note-modal--container.dark {
  background-color: var(--color-weight-500-transparent);
}

.delete-note-modal {
  display: flex;
  flex-direction: column;
  border-radius: 4px;
  width: 343px;
  padding: 24px;
}

.light .delete-note-modal {
  background-color: var(--color-weight-100);
}

.dark .delete-note-modal {
  background-color: var(--color-weight-900);
}

.delete-note-modal--title {
  line-height: 26.38px;
  margin: 0;
}

.light .delete-note-modal--title {
  color: var(--color-weight-700);
}

.dark .delete-note-modal--title {
  color: var(--color-weight-100);
}

.delete-note-modal--content {
  line-height: 24px;
  margin: 1rem 0;
}

.light .delete-note-modal--content {
  color: var(--color-weight-500);
}

.dark .delete-note-modal--content {
  color: var(--color-weight-400);
}

.menu {
  position: fixed;
  display: flex;
  flex-direction: column;
  background-color: var(--color-weight-900);
  width: 250px;
  height: 100%;
  padding: 30px 24px;
}

.menu--document-text {
  color: var(--color-weight-500);
  font-size: 0.875rem;
  text-transform: uppercase;
  letter-spacing: 2px;
  margin: 28px 0;
}

.menu--markdown-notes {
  margin-top: 1.5em;
}

.markdown-note {
  cursor: pointer;
  display: flex;
  align-items: center;
  width: 100%;
  margin-bottom: 1em;
  padding: 5px 0;
}

.markdown-note:hover {
  background-color: var(--color-weight-700);
  border-radius: 4px;
}

.markdown-note--icon-container {
  margin-right: 1em;
}

.markdown-note--creation-date,
.markdown-note--filename {
  margin: 0;
}

.markdown-note--creation-date {
  color: var(--color-weight-500);
  font-size: 0.8125rem;
}

.markdown-note--filename {
  color: var(--color-weight-100);
  font-size: 0.9375rem;
  margin-top: 3px;
}

.theme-btn-container {
  user-select: none;
  display: flex;
  align-items: center;
  margin-top: auto;
}

.theme-btn--icon-dark-container,
.theme-btn--icon-light-container {
  display: flex;
  align-items: center;
}

.theme-btn--icon-dark.selected,
.theme-btn--icon-light.selected {
  filter: brightness(0) invert(1);
}

.theme-btn {
  cursor: pointer;
  display: flex;
  background-color: var(--color-weight-600);
  border-radius: 14.5px;
  width: 48px;
  height: 24px;
  margin: 0 10px;
  padding: 6px;
}

.theme-btn--indicator {
  background-color: var(--color-weight-100);
  justify-self: flex-end;
  border-radius: 50%;
  width: 12px;
  height: 12px;
}

.theme-btn--dark {
  justify-content: flex-start;
}

.theme-btn--light {
  justify-content: flex-end;
}

.file-input {
  display: flex;
  align-items: center;
  flex-grow: 1;
  padding: 0 0.5em 0 1.5em;
}

.file-input--icon {
  margin-right: 1em;
}

.file-input--input {
  background-color: transparent;
  color: var(--color-weight-100);
  border: none;
  font-size: 0.9375rem;
  caret-color: var(--orange);
  width: 100%;
  max-width: 272px;
}

.file-input--input:hover,
.file-input--input:focus {
  border-bottom: 1px solid var(--color-weight-100);
}

.main {
  display: flex;
  flex-direction: column;
  height: 100%;
}

/* TODO: Update preview button color on dark theme and on hover to var(--orange-hover) */
.preview-bar {
  display: flex;
  justify-content: space-between;
  background-color: var(--color-weight-200);
  color: var(--color-weight-500);
  padding: 0 16px;
}

.preview-bar.light {
  background-color: var(--color-weight-200);
  color: var(--color-weight-500);
}

.preview-bar.dark {
  background-color: var(--color-weight-900);
  color: var(--color-weight-400);
}

.preview-bar--text {
  user-select: none;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.preview-container.dark {
  background-color: var(--color-weight-1000);
}

.preview-container.light {
  background-color: var(--color-weight-100);
}

.preview-container--content-wrapper {
  display: flex;
  justify-content: center;
}

.markdown-grid {
  display: flex;
  justify-content: center;
}

.markdown-grid .markdown-editor-container.dark {
  border-right: 1px solid var(--color-weight-600);
}

.markdown-grid .markdown-editor-container.light {
  border-right: 1px solid var(--color-weight-300);
}

.markdown-editor-container {
  flex-grow: 1;
  overflow: hidden;
  width: 100%;
  height: 100%;
  padding-bottom: 2.25em;
}

.preview-container {
  width: 100%;
  height: 100%;
}

.markdown-editor,
.preview-container--content {
  width: 100%;
  height: 100%;
  overflow: auto;
  margin: 0;
  padding: 1rem;
}

.preview-container--content {
  max-width: 672px;
  padding: 16px 20px;
}

.preview-container--content * {
  margin: 0;
}

.markdown-editor {
  font-family: "Roboto Mono", "Courier New", Courier, monospace;
  font-size: 0.875rem;
  border: none;
  border-radius: 0;
  resize: none;
  outline: none;
}

.markdown-editor.light,
.preview-container--content.light {
  background-color: var(--color-weight-100);
  color: var(--color-weight-700);
}

.markdown-editor.dark,
.preview-container--content.dark {
  background-color: var(--color-weight-1000);
  color: var(--color-weight-400);
}

.preview-container--content a {
  color: inherit;
  text-decoration: underline;
}

.preview-container--content p {
  line-height: 24px;
  margin: 21px 0;
}

.preview-container--content ul,
.preview-container--content ol {
  margin: 20px 0;
}

.preview-container--content li {
  font-size: 0.875rem;
  line-height: 24px;
}

.preview-container--content blockquote {
  border-radius: 4px;
  border-left: 4px solid var(--orange);
  font-weight: bold;
  margin: 20px 0;
  padding: 24px;
}

.preview-container--content blockquote * {
  margin: 0;
}

.preview-container--content pre {
  border-radius: 4px;
  white-space: pre-wrap;
  font-size: 14px;
  line-height: 24px;
  overflow-y: auto;
  padding: 24px;
}

.preview-container--content.light h1,
.preview-container--content.light h2,
.preview-container--content.light h3,
.preview-container--content.light h4,
.preview-container--content.light h5 {
  color: var(--color-weight-700);
}

.preview-container--content.dark h1,
.preview-container--content.dark h2,
.preview-container--content.dark h3,
.preview-container--content.dark h4,
.preview-container--content.dark h5 {
  color: var(--color-weight-100);
}

.preview-container--content.light p {
  color: var(--color-weight-500);
}

.preview-container--content.dark p {
  color: var(--color-weight-400);
}

.preview-container--content.light li {
  color: var(--color-weight-500);
}

.preview-container--content.dark li {
  color: var(--color-weight-400);
}

.preview-container--content.light blockquote {
  background-color: var(--color-weight-200);
}

.preview-container--content.dark blockquote {
  color: var(--color-weight-100);
  background-color: var(--color-weight-800);
}

.preview-container--content.light blockquote * {
  color: var(--color-weight-700);
}

.preview-container--content.dark blockquote * {
  color: var(--color-weight-100);
}

.preview-container--content.light code {
  color: var(--color-weight-700);
}

.preview-container--content.dark code {
  color: var(--color-weight-100);
}

.preview-container--content.light pre {
  background-color: var(--color-weight-200);
}

.preview-container--content.dark pre {
  background-color: var(--color-weight-800);
}

